# PyNC

./: .gitignore  README.md  pyproject.toml
ligands/: 2-ABA.xyz  2-Fur.xyz  2-Mpy.xyz  4-Br-2-TPC.xyz  5-Cl-PIC.xyz  ANT.xyz  BS.xyz  BzO.xyz  Cys.xyz  DBS.xyz  DS.xyz  FUS.xyz  GSH.xyz  INC.xyz  OP.xyz  PDC.xyz  PIC.xyz  PhP.xyz  PhS.xyz  Py.xyz  PyS.xyz  Pyr-2-COO.xyz  TPC.xyz  Th.xyz
src/perovkit/: ligand.py  nc.py  slab.py
src/pync/: __init__.py  core.py  ligand.py  nc.py  slab.py
src/pync/strain/: strain.py
src/pync/tilt/: __init__.py  apply_tilt.py  glazer_pattern.py
src/pync/utils/: geometry.py
